--- a/src/app/album-alumno/album-alumno.page.html
+++ b/src/app/album-alumno/album-alumno.page.html
@@ -7,38 +7,39 @@
   </ion-toolbar>
 </ion-header>
 <ion-content class="juegocoleccion-content" #content>
-<ion-button *ngIf ="coleccion.DosCaras"  class="ranking-btn" (click)="Voltear()">Dar la vuelta a todos los cromos</ion-button>
+  <ion-button *ngIf="coleccion.dosCaras" class="ranking-btn" (click)="Voltear()">Dar la vuelta a todos los cromos
+  </ion-button>
 
-    
-<div style = "width: 402px">
-  <span  *ngFor="let tengo of tengoCromo; let i = index">
-    <!-- Mostramos el album en 3 columnas -->
-    <span class="album3col">
-      <div  *ngIf = "!coleccion.DosCaras">
-        <img *ngIf="tengo"  [src]="imagenCromoDelante[i]" >
-        <img *ngIf="!tengo" style = "opacity: 0.5 !important;" [src]="imagenCromoDelante[i]" >
-      </div>
-   
-      <div  *ngIf = "coleccion.DosCaras  && !voltear"  >
-        <div class="flip-box">
-        <div class="flip-box-inner">
-          <div class="flip-box-front">
-              <img *ngIf="tengo" [src]="imagenCromoDelante[i]" >
-              <img *ngIf="!tengo" style = "opacity: 0.5 !important;" [src]="imagenCromoDelante[i]" >
-          </div>
 
-          <div class="flip-box-back">
-              <img  *ngIf="tengo" [src]="imagenCromoDetras[i]" >
+  <div style="width: 402px">
+    <span *ngFor="let tengo of tengoCromo; let i = index">
+      <!-- Mostramos el album en 3 columnas -->
+      <span class="album3col">
+        <div *ngIf="!coleccion.dosCaras">
+          <img *ngIf="tengo" [src]="imagenCromoDelante[i]">
+          <img *ngIf="!tengo" style="opacity: 0.5 !important;" [src]="imagenCromoDelante[i]">
+        </div>
+
+        <div *ngIf="coleccion.dosCaras  && !voltear">
+          <div class="flip-box">
+            <div class="flip-box-inner">
+              <div class="flip-box-front">
+                <img *ngIf="tengo" [src]="imagenCromoDelante[i]">
+                <img *ngIf="!tengo" style="opacity: 0.5 !important;" [src]="imagenCromoDelante[i]">
+              </div>
+
+              <div class="flip-box-back">
+                <img *ngIf="tengo" [src]="imagenCromoDetras[i]">
+              </div>
+            </div>
           </div>
         </div>
+
+        <div *ngIf="coleccion.dosCaras && voltear" style="margin-top:-5px;">
+          <img [src]="imagenCromoDetras[i]">
         </div>
-      </div>
 
-      <div *ngIf = "coleccion.DosCaras && voltear" style = "margin-top:-5px;" >
-        <img [src]="imagenCromoDetras[i]" >
-      </div>
-
+      </span>
     </span>
-  </span> 
   </div>
 </ion-content>
