--- a/src/app/juego-competicion-f1/juego-competicion-f1.page.html
+++ b/src/app/juego-competicion-f1/juego-competicion-f1.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content class="juegocompf1-content" #content>
-  <div *ngIf="juegoSeleccionado.Modo === 'Individual'">
+  <div *ngIf="juegoSeleccionado.modo === 'Individual'">
     <div *ngIf="infomialumno !== undefined" class="info-alumno">
       <img class="logo" src="../../assets/img/f1icon.svg" width="100px">
       <h2> Tu posición actual</h2>
@@ -31,32 +31,32 @@
 
     <div *ngIf="hideMe">
       <!-- Muestro el ranking -->
-      
+
       <ion-list>
-  
-          <ion-item *ngFor="let alumno of rankingIndividualFormulaUno">
-            <ion-item >
+
+        <ion-item *ngFor="let alumno of rankingIndividualFormulaUno">
+          <ion-item>
             <ion-label style="font-size: large;">
               {{alumno.posicion}}. {{alumno.nombre}} {{alumno.primerApellido}}
             </ion-label>
-            </ion-item>
-            <ion-label  style="font-size: large; color: red; text-align: right;">
-              {{alumno.puntos}} pts.
-            </ion-label>
           </ion-item>
+          <ion-label style="font-size: large; color: red; text-align: right;">
+            {{alumno.puntos}} pts.
+          </ion-label>
+        </ion-item>
       </ion-list>
     </div>
   </div>
 
-  <div *ngIf="juegoSeleccionado.Modo !== 'Individual'">
-    <div *ngIf="MiEquipo !== undefined" class="info-equipo">
+  <div *ngIf="juegoSeleccionado.modo !== 'Individual'">
+    <div *ngIf="miEquipo !== undefined" class="info-equipo">
       <img class="logo" src="../../assets/img/f1icon.svg" width="100px">
       <h2> Formas parte del equipo</h2>
-      <h3> {{MiEquipo.Nombre}} </h3>
+      <h3> {{miEquipo.nombre}} </h3>
       <h2> Posición actual del equipo</h2>
       <h3> {{ posicionDeMiEquipo }}</h3>
     </div>
-    <div *ngIf="MiEquipo !== undefined">
+    <div *ngIf="miEquipo !== undefined">
       <ion-card>
         <ion-card-header>
           Gráfico de progreso juego F1
@@ -71,30 +71,32 @@
     <ion-button class="ranking-btn" *ngIf="hideMe" (click)="OcultarElRanking();">Ocultar Ranking</ion-button>
     <div *ngIf="hideMe">
       <mat-accordion>
-        <mat-expansion-panel  *ngFor="let equipo of rankingEquiposFormulaUno">
+        <mat-expansion-panel *ngFor="let equipo of rankingEquiposFormulaUno">
           <mat-expansion-panel-header (click)="AlumnosDelEquipo(equipo)">
-           
-              <ion-item >
-                <ion-label *ngIf = "MiEquipo.id === equipo.id" style="font-size: large; width: 200px !important; color:rgb(33, 163, 102);">
-                  {{equipo.posicion}}. {{equipo.nombre}}
-                </ion-label>
-                <ion-label *ngIf = "MiEquipo.id !== equipo.id" style="font-size: large;width: 200px !important;  ">
-                  {{equipo.posicion}}. {{equipo.nombre}}
-                </ion-label>
-              </ion-item>
-              <ion-item style="font-size: large; color: red; text-align: right;">
-              <ion-label  style="font-size: large; color: red; text-align: right;">
-                  {{equipo.puntos}} pts.
+
+            <ion-item>
+              <ion-label *ngIf="miEquipo.id === equipo.id"
+                style="font-size: large; width: 200px !important; color:rgb(33, 163, 102);">
+                {{equipo.posicion}}. {{equipo.nombre}}
               </ion-label>
-              </ion-item>
-            
+              <ion-label *ngIf="miEquipo.id !== equipo.id" style="font-size: large;width: 200px !important;  ">
+                {{equipo.posicion}}. {{equipo.nombre}}
+              </ion-label>
+            </ion-item>
+            <ion-item style="font-size: large; color: red; text-align: right;">
+              <ion-label style="font-size: large; color: red; text-align: right;">
+                {{equipo.puntos}} pts.
+              </ion-label>
+            </ion-item>
+
           </mat-expansion-panel-header>
-          
-            <div  *ngFor="let alumno of alumnosEquipo">
-              <p *ngIf="alumno.id !== MiAlumno.id" >{{alumno.nombre}} {{alumno.primerApellido}} </p>
-              <p *ngIf="alumno.id === MiAlumno.id" style="color:rgb(33, 163, 102);" >{{alumno.nombre}} {{alumno.primerApellido}} </p>
-            </div>
-      
+
+          <div *ngFor="let alumno of alumnosEquipo">
+            <p *ngIf="alumno.id !== miAlumno.id">{{alumno.nombre}} {{alumno.primerApellido}} </p>
+            <p *ngIf="alumno.id === miAlumno.id" style="color:rgb(33, 163, 102);">{{alumno.nombre}}
+              {{alumno.primerApellido}} </p>
+          </div>
+
         </mat-expansion-panel>
       </mat-accordion>
     </div>
