--- a/src/app/juego-competicion-liga/juego-competicion-liga.page.html
+++ b/src/app/juego-competicion-liga/juego-competicion-liga.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content class="juegocompliga-content" #content>
-  <div *ngIf="juegoSeleccionado.Modo === 'Individual'">
+  <div *ngIf="juegoSeleccionado.modo === 'Individual'">
     <div *ngIf="infomialumno !== undefined" class="info-alumno">
       <img class="logo-liga" src="../../assets/img/ligaicon.svg" width="100px">
       <h2> Tienes </h2>
@@ -41,26 +41,27 @@
 
     <ion-button *ngIf="!hideMe" class="ranking-btn" (click)="MuestraElRanking();">Mostrar Clasificación</ion-button>
     <ion-button *ngIf="hideMe" class="ranking-btn" (click)="OcultarElRanking();">Ocultar Clasificación</ion-button>
-  
+
     <div *ngIf="hideMe">
       <mat-accordion>
         <div *ngFor="let alumno of rankingAlumnoJuegoDeCompeticion">
           <mat-expansion-panel>
             <mat-expansion-panel-header>
-              <ion-item >
-                <ion-label *ngIf="alumno.id === MiAlumno.id" style="font-size: large; width: 200px !important; color:rgb(33, 163, 102);">
+              <ion-item>
+                <ion-label *ngIf="alumno.id === miAlumno.id"
+                  style="font-size: large; width: 200px !important; color:rgb(33, 163, 102);">
                   {{alumno.posicion}}. {{alumno.nombre}} {{alumno.primerApellido}}
                 </ion-label>
-                <ion-label *ngIf ="alumno.id !== MiAlumno.id" style="font-size: large; width: 200px !important; ">
+                <ion-label *ngIf="alumno.id !== miAlumno.id" style="font-size: large; width: 200px !important; ">
                   {{alumno.posicion}}. {{alumno.nombre}} {{alumno.primerApellido}}
                 </ion-label>
               </ion-item>
               <ion-item>
-                <ion-label  style="font-size: large; color: red; text-align: right;">
+                <ion-label style="font-size: large; color: red; text-align: right;">
                   {{alumno.puntos}} pts.
                 </ion-label>
               </ion-item>
-             
+
             </mat-expansion-panel-header>
             <ion-list class="puntos-list-bg-acordeon">
               <p>Estás en la posición <b>{{ alumno.posicion }}</b> porque:</p>
@@ -87,44 +88,46 @@
       </mat-accordion>
     </div>
   </div>
-  <div *ngIf="juegoSeleccionado.Modo !== 'Individual'">
-    <div *ngIf="MiEquipo !== undefined" class="info-equipo">
+  <div *ngIf="juegoSeleccionado.modo !== 'Individual'">
+    <div *ngIf="miEquipo !== undefined" class="info-equipo">
       <img class="logo" src="../../assets/img/ligaicon.svg" width="100px">
       <h2> Formas parte del equipo</h2>
-      <h3> {{MiEquipo.Nombre}} </h3>
+      <h3> {{miEquipo.nombre}} </h3>
       <h2> que tiene </h2>
       <h3> {{ infoMiEquipo.puntos }} puntos</h3>
-      
+
 
       <ion-button class="ranking-btn" (click)="InformacionJornadas();">Jornadas</ion-button>
 
       <ion-button *ngIf="!hideMe" class="ranking-btn" (click)="MuestraElRanking();">Mostrar Clasificación</ion-button>
       <ion-button *ngIf="hideMe" class="ranking-btn" (click)="OcultarElRanking();">Ocultar Clasificación</ion-button>
-    
+
       <div *ngIf="hideMe">
         <mat-accordion>
-          <mat-expansion-panel  *ngFor="let equipo of rankingEquiposJuegoDeCompeticion">
+          <mat-expansion-panel *ngFor="let equipo of rankingEquiposJuegoDeCompeticion">
             <mat-expansion-panel-header (click)="AlumnosDelEquipo(equipo)">
 
-              <ion-item >
-                <ion-label *ngIf="equipo.id === MiEquipo.id" style="font-size: large; width: 200px !important; color:rgb(33, 163, 102);">
-                  {{equipo.posicion}}. {{equipo.nombre}} 
+              <ion-item>
+                <ion-label *ngIf="equipo.id === miEquipo.id"
+                  style="font-size: large; width: 200px !important; color:rgb(33, 163, 102);">
+                  {{equipo.posicion}}. {{equipo.nombre}}
                 </ion-label>
-                <ion-label *ngIf ="equipo.id !== MiEquipo.id" style="font-size: large; width: 200px !important; ">
-                  {{equipo.posicion}}. {{equipo.nombre}} 
+                <ion-label *ngIf="equipo.id !== miEquipo.id" style="font-size: large; width: 200px !important; ">
+                  {{equipo.posicion}}. {{equipo.nombre}}
                 </ion-label>
               </ion-item>
               <ion-item>
-                <ion-label  style="font-size: large; color: red; text-align: right;">
+                <ion-label style="font-size: large; color: red; text-align: right;">
                   {{equipo.puntos}} pts.
                 </ion-label>
               </ion-item>
-            
+
             </mat-expansion-panel-header>
-            
-            <div  *ngFor="let alumno of alumnosEquipo">
-              <p *ngIf="alumno.id !== MiAlumno.id" >{{alumno.nombre}} {{alumno.primerApellido}} </p>
-              <p *ngIf="alumno.id === MiAlumno.id" style="color:rgb(33, 163, 102);" >{{alumno.nombre}} {{alumno.primerApellido}} </p>
+
+            <div *ngFor="let alumno of alumnosEquipo">
+              <p *ngIf="alumno.id !== miAlumno.id">{{alumno.nombre}} {{alumno.primerApellido}} </p>
+              <p *ngIf="alumno.id === miAlumno.id" style="color:rgb(33, 163, 102);">{{alumno.nombre}}
+                {{alumno.primerApellido}} </p>
             </div>
             <ion-list class="puntos-list-bg-acordeon">
               <p>Este equipo está en la posición <b>{{ infoMiEquipo.posicion }}</b> porque:</p>
