--- a/src/app/juego-votacion-rapida/juego-votacion-rapida.page.html
+++ b/src/app/juego-votacion-rapida/juego-votacion-rapida.page.html
@@ -7,49 +7,50 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngIf = 'haVotado'>
+<ion-content *ngIf='haVotado'>
   <!-- Ya ha votado -->
   <div>
-   <h2 style="text-align: center;">Esta ha sido tu votación</h2>
-   <!-- Solo muestro los alumnos que recibieron votos -->
-   <ion-list *ngIf = 'misVotos'>
-       <ion-item *ngFor="let voto of misVotos; let i=index">
-         <ion-item>
-         <ion-label >
-           {{voto.c}} 
-         </ion-label>
-         </ion-item>
-         <ion-label style="font-size: large; color: green; text-align: right;">
-           {{voto.puntos}}
-         </ion-label>
-       </ion-item>
-   </ion-list>
-   <br>
-   <div style="text-align:center; margin-top: 10%;">  
-    <ion-button class="ranking-btn" (click)="Cerrar()"> Terminar </ion-button>  
-  </div> 
- </div>
- </ion-content>
+    <h2 style="text-align: center;">Esta ha sido tu votación</h2>
+    <!-- Solo muestro los alumnos que recibieron votos -->
+    <ion-list *ngIf='misVotos'>
+      <ion-item *ngFor="let voto of misVotos; let i=index">
+        <ion-item>
+          <ion-label>
+            {{voto.c}}
+          </ion-label>
+        </ion-item>
+        <ion-label style="font-size: large; color: green; text-align: right;">
+          {{voto.puntos}}
+        </ion-label>
+      </ion-item>
+    </ion-list>
+    <br>
+    <div style="text-align:center; margin-top: 10%;">
+      <ion-button class="ranking-btn" (click)="Cerrar()"> Terminar </ion-button>
+    </div>
+  </div>
+</ion-content>
 
-<ion-content *ngIf = "!haVotado && juegoSeleccionado.ModoReparto !== 'Reparto libre'">
+<ion-content *ngIf="!haVotado && juegoSeleccionado.modoReparto !== 'Reparto libre'">
 
   <!-- Si aun no ha votado -->
-  <div *ngIf = 'juegoSeleccionado'>
-    <div style="text-align:center; margin-top: 10%;">  
-      <ion-button class="ranking-btn" (click)="EnviarVotacion()"> Envía tu votación </ion-button>  
-    </div> 
+  <div *ngIf='juegoSeleccionado'>
+    <div style="text-align:center; margin-top: 10%;">
+      <ion-button class="ranking-btn" (click)="EnviarVotacion()"> Envía tu votación </ion-button>
+    </div>
     <ion-list>
       <ion-reorder-group (ionItemReorder)="reorderItems($event)" disabled="false">
 
-        <ion-item *ngFor="let concepto of juegoSeleccionado.Conceptos; let i=index">
+        <ion-item *ngFor="let concepto of juegoSeleccionado.conceptos; let i=index">
           <ion-item>
-          <ion-label>
-            {{concepto}}
-          </ion-label>
+            <ion-label>
+              {{concepto}}
+            </ion-label>
           </ion-item>
           <!-- En el caso de que estemos en una de las posiciones que recibe puntos, muestro los puntos que le corresponden -->
-          <ion-label *ngIf = 'i < juegoSeleccionado.Puntos.length' style="font-size: large; color: red; text-align: right;">
-          {{juegoSeleccionado.Puntos[i]}}
+          <ion-label *ngIf='i < juegoSeleccionado.puntos.length'
+            style="font-size: large; color: red; text-align: right;">
+            {{juegoSeleccionado.puntos[i]}}
           </ion-label>
           <ion-reorder slot="end"></ion-reorder>
         </ion-item>
@@ -77,35 +78,33 @@
 
 </ion-content>
 
-<ion-content *ngIf = "!haVotado && juegoSeleccionado.ModoReparto === 'Reparto libre'">
+<ion-content *ngIf="!haVotado && juegoSeleccionado.modoReparto === 'Reparto libre'">
 
-  
-    <div *ngIf = 'puntosARepartir === 0' style="text-align:center; margin-top: 10%;">  
-      <ion-button class="ranking-btn" (click)="EnviarVotacion()"> Envía tu votación </ion-button>  
-    </div> 
-    <br>
-    <ion-list style="text-align:center">
-      <ion-label align = "center">
-      <span  style = "font-size: 2em;">Reparte </span>  
-      <span  style = "font-size: 3em; color: red">{{puntosARepartir}}</span>   
-      <span  style = "font-size: 2em;">  puntos </span>
-      </ion-label>
-    </ion-list>
-    <br>
-    <ion-item *ngFor="let item of conceptosConPuntos; let i=index">
-      
-      <ion-label>
-          {{item.c}}
-      </ion-label>
 
-      <ion-label style="text-align: right;">
-        <span (click)="Decrementar (i)" style = "color: red" class="material-icons"> remove_circle_outline</span>
-        <span style = "font-size: 2em"> {{item.puntos}} </span>
-        <span (click)="Incrementar (i)" style = "color: green" class="material-icons"> add_circle_outline</span>
-        </ion-label>
-    </ion-item>
+  <div *ngIf='puntosARepartir === 0' style="text-align:center; margin-top: 10%;">
+    <ion-button class="ranking-btn" (click)="EnviarVotacion()"> Envía tu votación </ion-button>
+  </div>
+  <br>
+  <ion-list style="text-align:center">
+    <ion-label align="center">
+      <span style="font-size: 2em;">Reparte </span>
+      <span style="font-size: 3em; color: red">{{puntosARepartir}}</span>
+      <span style="font-size: 2em;"> puntos </span>
+    </ion-label>
+  </ion-list>
+  <br>
+  <ion-item *ngFor="let item of conceptosConPuntos; let i=index">
+
+    <ion-label>
+      {{item.c}}
+    </ion-label>
+
+    <ion-label style="text-align: right;">
+      <span (click)="Decrementar (i)" style="color: red" class="material-icons"> remove_circle_outline</span>
+      <span style="font-size: 2em"> {{item.puntos}} </span>
+      <span (click)="Incrementar (i)" style="color: green" class="material-icons"> add_circle_outline</span>
+    </ion-label>
+  </ion-item>
 
 
 </ion-content>
-
-
