--- a/src/app/mis-juegos-inactivos/mis-juegos-inactivos.page.html
+++ b/src/app/mis-juegos-inactivos/mis-juegos-inactivos.page.html
@@ -12,54 +12,61 @@
 
 <ion-content class="juegos-content">
 
-    <div>
-      <ion-row style="height: 25px"></ion-row>
-      <img height= "40px" src="../../assets/home/inactive-games-banner.svg">
-  
-      <div *ngIf="!JuegosInactivos[0]">
-        <br>
-        <br>
-        <br>
-        <p style = "font-size:x-large">No hay juegos inactivos</p>
-      </div>
-  
-  
-      <div *ngIf="JuegosInactivos.length > 1">
-        <button *ngIf="!disablePrevBtn" class = "anterior" mat-raised-button  (click)="prev()">Anterior</button>
-        <button *ngIf="!disableNextBtn"  class = "siguiente" mat-raised-button  (click)="next()">Siguiente</button>
-      </div>
-  
-  
-  
-      <ion-slides  #slides (ionSlideWillChange)="doCheck()">
-        <ion-slide *ngFor="let juego of JuegosInactivos">
-          <div>
-            <ion-card class="juegos-card-bg" style="background: grey;">
-              <div class = "info-juego">
-                <h2> {{juego.NombreJuego}} </h2>
-                <h3>{{ juego.Tipo }}</h3>
-                <p>{{ juego.Modo }}</p> 
-              </div>
-               <div class="logo-btn">
-                <img *ngIf="juego.Tipo == 'Juego De Puntos'" class = "card-img" src="../../assets/img/puntosicon.svg">
-                <img *ngIf="juego.Tipo == 'Juego De Colección'" class = "card-img" src="../../assets/img/collectionicon.svg">
-                <img *ngIf="juego.Tipo == 'Juego De Competición Fórmula Uno'" class = "card-img" src="../../assets/img/f1icon.svg">
-                <img *ngIf="juego.Tipo == 'Juego De Competición Liga'" class = "card-img" src="../../assets/img/ligaicon.svg">
-                <img *ngIf="juego.Tipo == 'Juego De Cuestionario'" class = "card-img" src="../../assets/img/cuestionariosicon.svg">
-                <img *ngIf="juego.Tipo == 'Juego De Geocaching'" class = "card-img" src="../../assets/img/location_icon.svg">
-                <img *ngIf="juego.Tipo == 'Juego De Avatar'" class = "card-img" src="../../assets/img/avataricon.svg">
-                <img *ngIf="juego.Tipo == 'Juego De Votación Uno A Todos'" class = "card-img" src="../../assets/img/votaciones.jpg">
-                <img *ngIf="juego.Tipo == 'Juego De Votación Todos A Uno'" class = "card-img" src="../../assets/img/votaciones.jpg"> 
-                <img *ngIf="juego.Tipo == 'Juego De Cuestionario de Satisfacción'" class = "card-img" src="../../assets/img/satisfaccion.png">
-  
-                <ion-button class="card-btn" style="color: grey;" (click)=JuegoSeleccionado(juego)>Ver más</ion-button>
-               </div>
-            </ion-card>
-          </div>
-        </ion-slide>
-      </ion-slides>
-  
-    </div>
-  
-</ion-content>
+  <div>
+    <ion-row style="height: 25px"></ion-row>
+    <img height="40px" src="../../assets/home/inactive-games-banner.svg">
 
+    <div *ngIf="!juegosInactivos[0]">
+      <br>
+      <br>
+      <br>
+      <p style="font-size:x-large">No hay juegos inactivos</p>
+    </div>
+
+
+    <div *ngIf="juegosInactivos.length > 1">
+      <button *ngIf="!disablePrevBtn" class="anterior" mat-raised-button (click)="prev()">Anterior</button>
+      <button *ngIf="!disableNextBtn" class="siguiente" mat-raised-button (click)="next()">Siguiente</button>
+    </div>
+
+
+
+    <ion-slides #slides (ionSlideWillChange)="doCheck()">
+      <ion-slide *ngFor="let juego of juegosInactivos">
+        <div>
+          <ion-card class="juegos-card-bg" style="background: grey;">
+            <div class="info-juego">
+              <h2> {{juego.nombreJuego}} </h2>
+              <h3>{{ juego.tipo }}</h3>
+              <p>{{ juego.modo }}</p>
+            </div>
+            <div class="logo-btn">
+              <img *ngIf="juego.tipo == 'Juego De Puntos'" class="card-img" src="../../assets/img/puntosicon.svg">
+              <img *ngIf="juego.tipo == 'Juego De Colección'" class="card-img"
+                src="../../assets/img/collectionicon.svg">
+              <img *ngIf="juego.tipo == 'Juego De Competición Fórmula Uno'" class="card-img"
+                src="../../assets/img/f1icon.svg">
+              <img *ngIf="juego.tipo == 'Juego De Competición Liga'" class="card-img"
+                src="../../assets/img/ligaicon.svg">
+              <img *ngIf="juego.tipo == 'Juego De Cuestionario'" class="card-img"
+                src="../../assets/img/cuestionariosicon.svg">
+              <img *ngIf="juego.tipo == 'Juego De Geocaching'" class="card-img"
+                src="../../assets/img/location_icon.svg">
+              <img *ngIf="juego.tipo == 'Juego De Avatar'" class="card-img" src="../../assets/img/avataricon.svg">
+              <img *ngIf="juego.tipo == 'Juego De Votación Uno A Todos'" class="card-img"
+                src="../../assets/img/votaciones.jpg">
+              <img *ngIf="juego.tipo == 'Juego De Votación Todos A Uno'" class="card-img"
+                src="../../assets/img/votaciones.jpg">
+              <img *ngIf="juego.tipo == 'Juego De Cuestionario de Satisfacción'" class="card-img"
+                src="../../assets/img/satisfaccion.png">
+
+              <ion-button class="card-btn" style="color: grey;" (click)=JuegoSeleccionado(juego)>Ver más</ion-button>
+            </div>
+          </ion-card>
+        </div>
+      </ion-slide>
+    </ion-slides>
+
+  </div>
+
+</ion-content>
