--- a/src/app/ver-avatares-grupo/ver-avatares-grupo.page.html
+++ b/src/app/ver-avatares-grupo/ver-avatares-grupo.page.html
@@ -1,4 +1,3 @@
-
 <ion-header class="juegos-header">
   <ion-toolbar class="header-toolbar">
     <ion-buttons slot="start">
@@ -13,23 +12,30 @@
       <!-- En la listaAvatares tengo para cada alumno: sus datos (campo al), su inscripcion (campo insc) y su voz (campo Voz) -->
       <div>
 
-            <h2> {{avatar.al.Nombre}} {{avatar.al.primerApellido}} {{avatar.al.segundoApellido}} </h2>
-                    
-            <div  *ngIf = "avatar.insc.Silueta" style="display: flex; width: 300px; height: 324px; margin: auto; margin-top: 20%;">
-              <img  [src]="imagenesAvatares + avatar.insc.Silueta" style="width: 300px; height: 324px; position: relative; z-index: 0;">
-              <img  *ngIf = "avatar.insc.Complemento1" [src]="imagenesAvatares + avatar.insc.Complemento1" style="width: 300px; height: 324px; position: absolute; z-index: 1;">
-              <img  *ngIf = "avatar.insc.Complemento2" [src]="imagenesAvatares + avatar.insc.Complemento2" style="width: 300px; height: 324px;position: absolute; z-index: 2;">
-              <img  *ngIf = "avatar.insc.Complemento3" [src]="imagenesAvatares + avatar.insc.Complemento3" style="width: 300px; height: 324px;position: absolute; z-index: 3;">
-              <img  *ngIf = "avatar.insc.Complemento4" [src]="imagenesAvatares + avatar.insc.Complemento4" style="width: 300px; height: 324px;position: absolute; z-index: 4;">
-            </div> 
-            
-            <div  *ngIf = "!avatar.insc.Silueta" style="display: flex; width: 300px; height: 324px; margin: auto; margin-top: 20%; margin-bottom: 30%; opacity: 0.2;">
-              <img  src = "../assets/interrogante.jpg" style="width: 300px; height: 324px; position: relative; z-index: 0;">
-            </div>
-            <audio controls *ngIf = 'avatar.insc.Voz' style="margin-bottom: 20%">
-              <source [src]="avatar.voz" type="audio/mpeg">
-            </audio>
- 
+        <h2> {{avatar.al.nombre}} {{avatar.al.primerApellido}} {{avatar.al.segundoApellido}} </h2>
+
+        <div *ngIf="avatar.insc.Silueta"
+          style="display: flex; width: 300px; height: 324px; margin: auto; margin-top: 20%;">
+          <img [src]="imagenesAvatares + avatar.insc.silueta"
+            style="width: 300px; height: 324px; position: relative; z-index: 0;">
+          <img *ngIf="avatar.insc.complemento1" [src]="imagenesAvatares + avatar.insc.complemento1"
+            style="width: 300px; height: 324px; position: absolute; z-index: 1;">
+          <img *ngIf="avatar.insc.complemento2" [src]="imagenesAvatares + avatar.insc.complemento2"
+            style="width: 300px; height: 324px;position: absolute; z-index: 2;">
+          <img *ngIf="avatar.insc.complemento3" [src]="imagenesAvatares + avatar.insc.complemento3"
+            style="width: 300px; height: 324px;position: absolute; z-index: 3;">
+          <img *ngIf="avatar.insc.complemento4" [src]="imagenesAvatares + avatar.insc.complemento4"
+            style="width: 300px; height: 324px;position: absolute; z-index: 4;">
+        </div>
+
+        <div *ngIf="!avatar.insc.silueta"
+          style="display: flex; width: 300px; height: 324px; margin: auto; margin-top: 20%; margin-bottom: 30%; opacity: 0.2;">
+          <img src="../assets/interrogante.jpg" style="width: 300px; height: 324px; position: relative; z-index: 0;">
+        </div>
+        <audio controls *ngIf='avatar.insc.Voz' style="margin-bottom: 20%">
+          <source [src]="avatar.voz" type="audio/mpeg">
+        </audio>
+
 
       </div>
     </ion-slide>
