--- a/src/app/mis-grupos/mis-grupos.page.html
+++ b/src/app/mis-grupos/mis-grupos.page.html
@@ -28,7 +28,7 @@
       <!-- <ng-container *ngSwitchCase="'Alumnos'"> -->
       <mat-expansion-panel (opened)="TraeEquiposGrupo (listaGruposYAlumnos[i].grupo); mostrarAlumnos = true">
         <mat-expansion-panel-header>
-          <b>{{elem.Grupo}}</b>
+          <b>{{elem.grupo}}</b>
         </mat-expansion-panel-header>
         <ion-list style="text-align:center">
           <ion-button class="ranking-btn" (click)="mostrarAlumnos = true; mostrarEquipos = false">Ver alumnos
